# dotsocr-fastapi

./: .env.example  .gitignore  README.md  pyproject.toml
src/dots_ocr/: app.py  download_weights.py
src/dots_ocr/utils/: device_utils.py  inference_utils.py  io_utils.py  pipeline_utils.py
